--- a/provider_getx_flutter/pubspec.yaml
+++ b/provider_getx_flutter/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_tutorial
+name: provider_getx_flutter
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -28,7 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.6
+  provider: ^5.0.0
+  get: ^4.1.4
 
 dev_dependencies:
   flutter_test:
